# QuickClip

./: ALWAYS_RUNNING.md  AUTO_START_GUIDE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  FEATURES.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  build.sh  package-lock.json  package.json  test-build.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  clipboard_history.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
