[package]
name = "quickclip"
version = "0.1.0"
description = "QuickClip - Smart Clipboard Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "quickclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
arboard = "3.4"
tokio = { version = "1", features = ["full"] }
image = "0.25.9"
base64 = "0.22.1"
